# DanceTrack

./: .gitignore  CMakeLists.txt  README.md
calibration/: Calibration.m  Gen_Initials.m  HSVB_Explore.m  HSV_Explore.m  OpenCVCalib  OpenCVCalib.cpp  TestCal.m  make_calib  untitled3.m  worldToImage.m
data/: Flock1.xdf  ReadFlock1.m
debug/P1/: builddebug.sh  debug.cpp  debug.m
matlab/: plotBlobEllipse.m  readDSGYABlobs.m  writeDSGYABlobs.m
src/: BiCC.cpp  BiCC.h  DSGYA_Segmenter.cpp  DSGYA_Segmenter.h  DSGYBlobber.cpp  DSGYBlobber.h  DanceTracker.cpp  DanceTracker.h  DanceTrackerGUI.cpp  DanceTrackerGUI.h
test/: BiCC.cpp  BiCC.h  DSGYA_Segmenter.cpp  DSGYA_Segmenter.h  buildtest.sh  gen_test_ellipses.m  gen_test_ellipses1.m  testBiCC  testBiCC.cpp  testDSGYA_Segmenter.cpp  testDSGYBlobber  testDSGYBlobber.cpp  testDSGYBlobberWHist  testDSGYBlobberWHist.cpp  test_BiCC.m  test_blobs.m  test_with_dance.m  test_with_dance1.m
